ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uenergyframework-ingress
  namespace: uenergyframework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: uenergyframework.local
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
      - path: /webui
        pathType: Prefix
        backend:
          service:
            name: webui-service
            port:
              number: 8085
      - path: /database
        pathType: Prefix
        backend:
          service:
            name: database-service
            port:
              number: 8086
